# render-rs-test

./: Cargo.toml  blur.spv  gradients.spv  into_ycbcr.spv
assets/shaders/: .clang-format  blur.hlsl  gradients.hlsl  into_ycbcr.hlsl  raster_simple_ps.hlsl  raster_simple_vs.hlsl
assets/shaders/inc/: color.hlsl  rand.hlsl  uv.hlsl
assets/shaders/rt/: triangle.rchit.hlsl  triangle.rgen.hlsl  triangle.rmiss.hlsl
rg/: Cargo.toml
rg/src/: command_ext.rs  context.rs  dynamic_constants.rs  graph.rs  lib.rs  pass_builder.rs  pipeline.rs  pipeline_cache.rs  render_target.rs  resource.rs  resource_registry.rs  resource_view.rs  shader_cache.rs
src/: bytes.rs  file.rs  main.rs  mesh.rs  owned_resource.rs  render_device.rs  render_loop.rs  render_passes.rs  renderer.rs  rg.rs  rg_helper.rs  rt_util.rs  shader_cache.rs  shader_compiler.rs
