[package]
name = "render-rs-test"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render-core = { path = "../../ext/render-rs/render-core" }
render-hal-vk = { path = "../../ext/render-rs/render-hal-vk" }
failure = "0.1.5"
chrono = "0.4"
env_logger = "0.7"
log = "0.4"
winit = "0.19"
raw-window-handle = "0.3.3"
