[package]
name = "render-rs-test"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render-core = { path = "../../ext/render-rs/render-core" }
render-hal-vk = { path = "../../ext/render-rs/render-hal-vk" }
failure = "0.1.5"
chrono = "0.4"
env_logger = "0.7"
log = "0.4"
winit = "0.19"
raw-window-handle = "0.3.3"
spirv-reflect = { git = "https://github.com/h3r2tic/spirv-reflect-rs.git", rev = "47636b8" }

hassle-rs = "0.4.0"
turbosloth = "0.2.0"
turbosloth-macros = "0.1.0"
shader-prepper = "0.2"
relative-path = "1.3"
hotwatch = "0.4"
lazy_static = "1.4"
tokio = { version = "0.2.1", features = ["rt-core", "blocking", "rt-threaded"] }
byte-slice-cast = "0.3.5"
anyhow = "1.0"
rspirv = { git = "https://github.com/Traverse-Research/rspirv.git" }

#[patch.crates-io]
#turbosloth = { path = "../turbosloth" }