[package]
name = "render-rs-test"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "0.1"
anyhow = "1.0"
bincode = "1.3"
byte-slice-cast = "0.3.5"
chrono = "0.4"
env_logger = "0.7"
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
glam = "0.9"
gltf = "0.15"
hassle-rs = "0.4.0"
hotwatch = "0.4"
lazy_static = "1.4"
log = "0.4"
raw-window-handle = "0.3.3"
relative-path = "1.3"
render-core = { path = "../../ext/render-rs/render-core" }
render-hal-vk = { path = "../../ext/render-rs/render-hal-vk" }
rg = { path = "rg" }
rspirv = { git = "https://github.com/Traverse-Research/rspirv.git" }
serde = { version = "1.0", features = ["derive"] }
shader-prepper = "0.2"
smol = "0.3"
spirv-reflect = { git = "https://github.com/h3r2tic/spirv-reflect-rs.git", rev = "246a700" }
turbosloth = "0.2.0"
turbosloth-macros = "0.1.0"
winit = "0.19"

[patch.crates-io]
turbosloth = { path = "../turbosloth" }

[patch."https://github.com/h3r2tic/spirv-reflect-rs.git"]
spirv-reflect = { path = "../spirv-reflect-rs" }
